Update UserServlet, UserDAO, employees.jsp + image upload + edit modal